# mdeartworks

./: CMakeLists.txt  README.md  generate_png.sh
icons/: index.theme
icons/64x64/emotes/: README.txt
wallpapers/: bluebox.pov
